[tool.poetry]
name = "cscribe"
version = "0.1.0"
description = "cmlkit plugin for the dscribe package"
authors = ["Marcel Langer <dev@sirmarcel.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sirmarcel/cscribe"

[tool.poetry.dependencies]
python = "^3.7"
cmlkit = ">=2.0.0a14"
dscribe = "*"
numpy = ">=1.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
